# dot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  release-please-config.json
.github/workflows/: ci.yml  merge.yml  pages.yml  release-please.yml  release.yml
docs/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_diff.rs  fuzz_expand_tilde.rs  fuzz_find_dotf_root.rs  fuzz_resolve_symlink.rs  fuzz_template_render.rs  fuzz_toml_parse.rs  fuzz_uri_dispatch.rs  fuzz_validation.rs
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json
mutants.out/diff/: src__commands__config.rs_line_17_col_8.diff  src__commands__config.rs_line_46_col_12.diff  src__commands__config.rs_line_55_col_12.diff  src__commands__config.rs_line_8_col_5.diff  src__commands__config.rs_line_93_col_8.diff  src__commands__diff.rs_line_108_col_5.diff  src__commands__diff.rs_line_116_col_5.diff  src__commands__diff.rs_line_116_col_5_001.diff  src__commands__diff.rs_line_116_col_5_002.diff  src__commands__diff.rs_line_120_col_14.diff  src__commands__diff.rs_line_120_col_14_001.diff  src__commands__diff.rs_line_120_col_14_002.diff  src__commands__diff.rs_line_120_col_26.diff  src__commands__diff.rs_line_120_col_32.diff  src__commands__diff.rs_line_120_col_32_001.diff  src__commands__diff.rs_line_120_col_32_002.diff  src__commands__diff.rs_line_121_col_15.diff  src__commands__diff.rs_line_121_col_15_001.diff  src__commands__diff.rs_line_121_col_15_002.diff  src__commands__diff.rs_line_121_col_27.diff  src__commands__diff.rs_line_121_col_33.diff  src__commands__diff.rs_line_121_col_33_001.diff  src__commands__diff.rs_line_121_col_33_002.diff  src__commands__diff.rs_line_121_col_45.diff  src__commands__diff.rs_line_121_col_56.diff  src__commands__diff.rs_line_123_col_16.diff  src__commands__diff.rs_line_123_col_16_001.diff  src__commands__diff.rs_line_124_col_16.diff  src__commands__diff.rs_line_124_col_16_001.diff  src__commands__diff.rs_line_129_col_23.diff  src__commands__diff.rs_line_129_col_23_001.diff  src__commands__diff.rs_line_129_col_31.diff  src__commands__diff.rs_line_129_col_31_001.diff  src__commands__diff.rs_line_129_col_31_002.diff  src__commands__diff.rs_line_129_col_43.diff  src__commands__diff.rs_line_129_col_49.diff  src__commands__diff.rs_line_129_col_49_001.diff  src__commands__diff.rs_line_129_col_49_002.diff  src__commands__diff.rs_line_129_col_61.diff  src__commands__diff.rs_line_129_col_72.diff  (+135 more)
src/: dotfiles.rs  lib.rs  main.rs  runner.rs  secret.rs  ui.rs
src/commands/: config.rs  diff.rs  init.rs  mod.rs  modify.rs  remove.rs  secrets.rs  status.rs  sync.rs
tests/: integration.rs
