[package]
name = "dot"
version = "0.1.0"
edition = "2024"
description = "Personal dotfiles manager with Proton Pass secret injection"
license = "MIT"

[[bin]]
name = "dot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
handlebars = "6"
walkdir = "2"
dirs = "5"
colored = "2"
dialoguer = "0.11"
which = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
