[package]
name = "dot"
version = "0.6.0"
edition = "2024"
description = "Dotfiles manager with pluggable secret injection (pass, op, bw, env)"
license = "MIT"

[lib]
name = "dotf"
path = "src/lib.rs"

[[bin]]
name = "dotf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

dirs = "5"
colored = "2"
dialoguer = "0.11"
which = "6"
chrono = "0.4"
similar = "2"
tempfile = "3"
zeroize = "1"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
debug = true
